--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,21 @@
 <resources>
     <string name="app_name">"Tic Tac Boom "</string>
     <string name="title_activity_extended_game">ExtendedGameActivity</string>
+    <string name="rules1">
+        30 минут напряженной игры, во время которой игроки проходят проверку на умение действовать и думать
+        так быстро, как только это возможно, ведь бомба может взорваться в любой момент.
+    </string>
+    <string name="rules2">
+        Каждый из игроков должен стремиться, как можно быстрее назвать слово, в котором есть буквосочетания,
+        представленные на экране. Если же игрок не успевает назвать слово и \"бомба взрывается у него в руках\",
+        то он получает штрафное очко.
+    </string>
+    <string name="rules3">
+        При достижении максимального штрафа, игрок вылетает. \"Оставшийся в живых\"
+        игрок объявляется победителем.
+    </string>
+     <string name="rules4">
+        В режиме быстрой игры, игрок вылетает при достижении 5 штрафных очков. В режиме полной игры,
+         игрок вылетает при достижении 10 штрафных очков.
+    </string>
 </resources>
